--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/root.css">
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/local.css">
     <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="/css/dark-root-styles.css">
 
     <title>Title | Business | Location, WA</title>
 </head>
