--- a/testimonials.html
+++ b/testimonials.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="/css/root.css">
     <link rel="stylesheet" href="/css/testimonials.css">
     <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="/css/dark-root-styles.css">
 
     <title></title>
 </head>
