--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
                     </ul>
                     <ul>
                         <li><h2>Get in Touch</h2></li>
-                        <li><img loading="lazy" decoding="async" src="/images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">400 W Methvin St. Longview, Tx</a></li>
+                        <li><img loading="lazy" decoding="async" src="/images/pin.svg" alt="" width="24" height="24"><a href="" target="_blank">Somewhere, Tx</a></li>
                         <li><img loading="lazy" decoding="async" src="/images/footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120">(555) 213-9120</a></li>
                         <li><img loading="lazy" decoding="async" src="/images/email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com">info@email.com</a></li>
                     </ul>
