--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="service">
                 <h2>This is a main<span> service you do</span></h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue sed.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue.
                 </p>
                 <a href="/contact.html" class="button-solid">Get in Touch</a>
             </div>
@@ -137,7 +137,7 @@
             <div class="service">
                 <h2>This is a main<span> service you do</span></h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue sed.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi odio dui, fermentum id augue .
                 </p>
                 <a href="/contact.html" class="button-solid">Get in Touch</a>
             </div>
