--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 
         <section id="form">
             <div class="left-section">
-                <span class="topper">Resolute</span>
+                <span class="topper">Business Name</span>
                 <h2>Send a Message</h2>
                 <p>If you have any questions or concerns please feel free to reach out to us.  we respond to every call and email.</p>
                 <form id="contact" name="Contact Form" method="post" data-netlify-recaptcha="true" data-netlify="true">
