--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							 >
 						</div>
 						<div class="content">
-							<div class="inner">
+							<div class="tracking-in-expand inner">
 								<h1>Hello</h1>
 								<p>My name is Rico Rodriguez<br />
 								Your Software Engineer</p>
