netlify form added

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="#">
+									<form method="post" action="#" netlify>
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
