Fixed header <br>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="tracking-in-expand inner">
 								<h1>Hello</h1>
-								<p>My name is Rico Rodriguez<br />
+								<p>My name is Rico Rodriguez<br>
 								Your Software Engineer</p>
 							</div>
 						</div>
