Header intro text updated

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 						<div class="content">
 							<div class="tracking-in-expand inner">
 								<h1>Hello</h1>
-								<p>My name is Rico Rodriguez<br>
-								Your Software Engineer</p>
+								<h5>My name is Rico Rodriguez<h5>
+								<h6>Your Software Engineer</h6></p>
 							</div>
 						</div>
 						<nav>
