--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Résumé</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#projects">awesome projects</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main">
+									<embed width="100%" height="900" src="assets/resume.pdf#zoom=90&pagemode=none&scrollbar=0&toolbar=0&statusbar=1&messages=0&navpanes=0"/>
+
+								</span>
+								
 							</article>
 
 						<!-- projects -->
@@ -53,19 +55,29 @@
 								<h2 class="major">Library</h2>
 								<img src="images/library.png" alt="" />
 								<a href="https://github.com/The-Rico/library" class="button small">Github</a> <a href="http://library.ricorodriguez.me" class="button small">Live</a><br><p>
-									Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p></span>
+									Fully responsive layout using Tailwind CSS. Allows the user to
+									dynamically add and remove books. Also set whether it has been read with the ability to update it on
+									the fly. Login Modal and smooth scrolling to navigation links.</p></span>
 								<span class="image main">
 									<h2 class="major">Admin Dashboard</h2>
 									<img src="images/admin.png" alt="" /><a href="https://github.com/The-Rico/adminPage" class="button small">Github</a> <a href="http://admin.ricorodriguez.me" class="button small">Live</a><br><p></p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p></span>
+								<p>This layour is constructed completely using CSS grid. There are three main components: The sidebar, the header, and the main content page. It features a profile system and multiple modules available to insert user content! Built with Tailwind CSS.</p></span>
 								<span class="image main">
 									<h2 class="major">Game login</h2>
 									<img src="images/game.png" alt="" /><a href="https://github.com/The-Rico/game-login" class="button small">Github</a> <a href="http://game.ricorodriguez.me" class="button small">Live</a><br><p></p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p></span>
+								<p>A fully responsive web page styled for a futuristic game. Features form validation and a few other functional features!</p></span>
 								<span class="image main">
 									<h2 class="major">Calculator</h2>
 									<img src="images/calculator.png" alt="" /><a href="https://github.com/The-Rico/calculator" class="button small">Github</a> <a href="http://calculator.ricorodriguez.me" class="button small">Live</a><br><p></p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p></span>
+								<p>A beautifully styled calculator using Bootstrap.</p></span>
+								<span class="image main">
+									<h2 class="major">Etch-a-Sketch</h2>
+									<img src="images/etch.png" alt="" /><a href="https://github.com/The-Rico/etch-a-sketch" class="button small">Github</a> <a href="http://etch.ricorodriguez.me" class="button small">Live</a><br><p></p>
+								<p>I put my own flavor into this project. Many others have similar look's and feels but I wanted something more unique. Try it out! You can change the grid and draw to your hearts content!</p></span>
+								<span class="image main">
+									<h2 class="major">Rock Paper Scissors</h2>
+									<img src="images/rock.png" alt="" /><a href="https://github.com/The-Rico/rockpaperscissors" class="button small">Github</a> <a href="http://rock.ricorodriguez.me" class="button small">Live</a><br><p></p>
+								<p>Very simple game. Choose your weapon and hopefully luck is on your side!</p></span>
 							</article>
 
 						<!-- About -->
