--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article id="intro">
 								<h2 class="major">Résumé</h2>
 								<span class="image main">
-									<embed width="100%" height="900" src="assets/resume.pdf#zoom=90&pagemode=none&scrollbar=0&toolbar=0&statusbar=1&messages=0&navpanes=0"/>
+									<embed width="100%" height="auto" src="assets/resume.pdf#pagemode=none&scrollbar=0&toolbar=0&statusbar=0&messages=0&navpanes=0"/>
 
 								</span>
 								
