Download link for PDF

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 							<article id="intro">
 								<h2 class="major">Résumé</h2>
 								<span class="image main">
+									<a href="/assets/resume.pdf" class="button primary icon solid fa-download">Download</a>
 									<embed width="100%" height="100%" src="assets/resume.pdf#pagemode=none&scrollbar=0&toolbar=0&statusbar=0&messages=0&navpanes=0"/>
 
 								</span>
