--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 							<ul>
 								<li><a href="#intro">Résumé</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Elements</a></li>
+								<!-- <li><a href="#about">About</a></li>
+								<li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -91,7 +91,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#" netlify>
+								<form method="post" netlify>
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -112,10 +112,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/The__Rico" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/The-Rico/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/rico-/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</article>
 
