--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" netlify>
+								<form method="post" action="/index.html#contact" netlify>
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
