--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="/index.html#contact" netlify>
+								<form method="post" action="/index.html#contact" data-netlify="true" netlify>
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -108,7 +108,7 @@
 									</div>
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
+										<li><input type="submit" value="Reset" /></li>
 									</ul>
 								</form>
 								<ul class="icons">
