Resume image added

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 							<article id="intro">
 								<h2 class="major">Résumé</h2>
 								<span class="image main">
-									<a href="/assets/resume.pdf" class="button primary icon solid fa-download">Download</a><hr>
-									<embed width="100%" height="600px" src="assets/resume.pdf#pagemode=none&scrollbar=0&toolbar=0&statusbar=0&messages=0&navpanes=0"/>
+									<a href="/resume.pdf" class="button primary icon solid fa-download">Download</a><hr>
+									<img src="/resume.png" alt="resume" srcset="">
 
 								</span>
 								
