--- a/index.html
+++ b/index.html
@@ -53,11 +53,16 @@
 						<!-- projects -->
 							<article id="projects">
 								<span class="image main">
-									<h2 class="major">Notely</h2>
-									<img src="images/Notely.png" alt="" />
-									<a href="https://github.com/The-Rico/builtNotes" class="button small">Github</a> <a href="http://notely.ricorodriguez.me" class="button small">Live</a><br><p>
-										Fully built in ReactJS. Utilized Webpack via Create-react-app. Fully responsive. Integrated MDE. Materials UI. Localstorage. Multiple saved states. </p></span>
-									<span class="image main">
+									<h2 class="major">Weather App</h2>
+									<img src="images/weather.png" alt="" />
+									<a href="https://github.com/The-Rico/weatherappREACT" class="button small">Github</a> <a href="http://weather.mozilla.tech" class="button small">Live</a><br><p>
+										Features API calling, Create-React-App, Javascript, Html, Css, JSON. </p></span>
+									<span class="image main">								<span class="image main">
+										<h2 class="major">Notely</h2>
+										<img src="images/Notely.png" alt="" />
+										<a href="https://github.com/The-Rico/builtNotes" class="button small">Github</a> <a href="http://notely.ricorodriguez.me" class="button small">Live</a><br><p>
+											Fully built in ReactJS. Utilized Webpack via Create-react-app. Fully responsive. Integrated MDE. Materials UI. Localstorage. Multiple saved states. </p></span>
+										<span class="image main">
 								<h2 class="major">Library</h2>
 								<img src="images/library.png" alt="" />
 								<a href="https://github.com/The-Rico/library" class="button small">Github</a> <a href="http://library.ricorodriguez.me" class="button small">Live</a><br><p>
